Changed Login UI and implemented Cloudinary

--- a/Web/Bookworm.Web/Views/Book/CurrentBook.cshtml
+++ b/Web/Bookworm.Web/Views/Book/CurrentBook.cshtml
@@ -18,7 +18,7 @@
                             </a>
                         </div>
                         <div class="m-4 text-center">
-                            <a asp-controller="FavoriteBook" asp-action="AddToFavorites" asp-route-bookId="@Model.Id" title="Add to Favorites">
+                            <a asp-controller="FavoriteBook" asp-action="AddToFavorites" asp-route-id="@Model.Id" title="Add to Favorites">
                                 <i class="fas fa-heart fa-2x"></i>
                             </a>
                         </div>
