--- a/Web/Bookworm.Web/Views/Quiz/TakeQuiz.cshtml
+++ b/Web/Bookworm.Web/Views/Quiz/TakeQuiz.cshtml
@@ -4,9 +4,12 @@
     ViewData["Title"] = "Generate Quiz";
 }
 
-<h2 class="text-center">@ViewData["Title"]</h2>
+<div class="text-center textContainer col-3">
+    <h2 class="text-center">@this.ViewData["Title"]</h2>
+</div>
 
 <form method="post" class="col-lg-8 offset-lg-2">
+    <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
         <label asp-for="CategoryName"><strong>Select Category</strong></label>
         <select asp-for="CategoryName" asp-items="@Model.Categories" size="5" aria-label="size 5 select example" class="form-select form-control"></select>
