--- a/Web/Bookworm.Web/wwwroot/lib/sb-admin-2/sb-admin-2.css
+++ b/Web/Bookworm.Web/wwwroot/lib/sb-admin-2/sb-admin-2.css
@@ -10861,9 +10861,9 @@ a:focus {
 }
 
 .bg-login-image {
-  background: url("https://source.unsplash.com/K4mSJ7kc0As/600x800");
-  background-position: center;
-  background-size: cover;
+    /*background: url("https://bookwormsample123.blob.core.windows.net/testcontainer/login-image.jpg");*/
+    background-position: center;
+    background-size: cover;
 }
 
 .bg-register-image {
