--- a/Web/Bookworm.Web/Views/Home/Index.cshtml
+++ b/Web/Bookworm.Web/Views/Home/Index.cshtml
@@ -5,8 +5,12 @@
 }
 
 <section class="animate__animated animate__zoomIn welcomeSection">
-    <div class="text-center textContainer col-8">
-        <h1 class="display-4 ">Welcome to @GlobalConstants.SystemName!<i class="fas fa-book"></i></h1>
+    <div class="col d-flex justify-content-center">
+        <div id="textCard" class="card col-8 text-center">
+            <div class="card-body">
+                <h1 class="display-4">Welcome to @GlobalConstants.SystemName!<i class="fas fa-book"></i></h1>
+            </div>
+        </div>
     </div>
     <div class="card border-dark blockquote-card">
         <div class="card-header">
