--- a/Web/Bookworm.Web/Views/Shared/_AdminLayout.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_AdminLayout.cshtml
@@ -46,6 +46,18 @@
                 </a>
             </li>
 
+            <li class="nav-item active">
+                <a asp-area="admin" asp-controller="Book" asp-action="AllBooks" class="nav-link">
+                    <span>Manage Books</span>
+                </a>
+            </li>
+
+             <li class="nav-item active">
+                <a asp-area="admin" asp-controller="Quote" asp-action="AllQuotes" class="nav-link">
+                    <span>Manage Quotes</span>
+                </a>
+            </li>
+
             <!-- Divider -->
             <hr class="sidebar-divider">
 
