--- a/Web/Bookworm.Web/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using Bookworm.Web
 @using Bookworm.Web.ViewModels
 @using Bookworm.Web.ViewModels.Users;
+@using Bookworm.Web.ViewModels.Books;
+@using Bookworm.Web.ViewModels.Quotes;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Bookworm.Web
