--- a/Web/Bookworm.Web/Views/Book/All.cshtml
+++ b/Web/Bookworm.Web/Views/Book/All.cshtml
@@ -4,8 +4,12 @@
     this.ViewData["Title"] = "Books";
 }
 
-<div class="text-center textContainer col-7">
-    <h1 class="display-4">@Model.CategoryName</h1>
+<div class="col d-flex justify-content-center">
+    <div id="textCard" class="card col-8 text-center">
+        <div class="card-body">
+            <h1 class="display-4">@Model.CategoryName</h1>
+        </div>
+    </div>
 </div>
 <hr />
 
@@ -28,13 +32,13 @@
     <hr />
     <nav id="booksPagination" aria-label="...">
         <ul class="pagination justify-content-center">
-            <li class="page-item 
-              @if (Model.HasPreviousPage == false) 
-              {
+            <li class="page-item
+            @if (Model.HasPreviousPage == false)
+            {
                       <text>disabled</text>
               }">
-               <a id="previous" class="page-link" asp-action="All" asp-route-categoryName="@Model.CategoryName" asp-route-page="@Model.PreviousPageNumber">Previous</a>
-            </li>
+                   <a id="previous" class="page-link" asp-action="All" asp-route-categoryName="@Model.CategoryName" asp-route-page="@Model.PreviousPageNumber">Previous</a>
+                </li>
             @for (int i = Model.PageNumber - 3; i < Model.PageNumber; i++)
             {
                 if (i > 0)
@@ -58,8 +62,8 @@
             <li class="page-item @if (Model.HasNextPage == false) {
         <text>disabled</text>
 }">
-                <a class="page-link" asp-action="All" asp-route-categoryName="@Model.CategoryName" asp-route-page="@Model.NextPageNumber">Next</a>
-            </li>
+                    <a class="page-link" asp-action="All" asp-route-categoryName="@Model.CategoryName" asp-route-page="@Model.NextPageNumber">Next</a>
+                </li>
         </ul>
     </nav>
 }
