--- a/Web/Bookworm.Web/Views/Quote/All.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/All.cshtml
@@ -10,7 +10,7 @@
 </div>
 
 
-<table class="table table-bordered animate__animated animate__zoomIn">
+<table id="quotesTable" class="table table-bordered animate__animated animate__zoomIn">
     <thead>
         <tr>
             <th scope="col">#</th>
