--- a/Web/Bookworm.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_LoginPartial.cshtml
@@ -4,24 +4,25 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
+
 <ul class="navbar-nav">
     @if (this.SignInManager.IsSignedIn(this.User))
     {
         var user = this.UserManager.GetUserAsync(this.User);
         var favoriteBooksCount = user.Result.FavoriteBooks.Count();
-        string url = null;
-        if (user != null)
-        {
-            url = user.Result.ProfilePictureUrl;
-        }
-
-        <li class="nav-item dropdown no-arrow animate__fadeIn">
+        string url = user.Result.ProfilePictureUrl;
+        var points = user.Result.Points;
+        <li class="nav-item dropdown no-arrow">
             <a class="nav-link dropdown-toggle" id="userDropdown" role="button"
            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <img class="img-profile rounded-circle" width="40" height="40" src=@url>
             </a>
             <div class="dropdown-menu dropdown-menu-right shadow "
              aria-labelledby="userDropdown">
+                <a class="dropdown-item">
+                    <i class="fas fa-graduation-cap fa-sm fa-fw mr-2 text-gray-400"></i>
+                    Your Points: @points
+                </a>
                 @if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
                 {
                     <a class="dropdown-item" asp-area="Admin" asp-controller="Home" asp-action="Index" title="Admin">
@@ -36,7 +37,14 @@
                     <i class="fas fa-heart fa-sm fa-fw mr-2 text-gray-400"></i>
                     Favorite Books
                 </a>
-
+                <a class="dropdown-item" asp-area="" asp-action="UserBooks" asp-controller="Book">
+                    <i class="fas fa-book fa-sm fa-fw mr-2 text-gray-400"></i>
+                    My Books
+                </a>
+                <a class="dropdown-item" asp-area="" asp-action="UserQuotes" asp-controller="Quote">
+                    <i class="fas fa-pen fa-sm fa-fw mr-2 text-gray-400"></i>
+                    My Quotes
+                </a>
                 <div class="dropdown-divider"></div>
                 <form class="form-inline dropdown-item" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@this.Url.Action("Index", "Home", new { area = string.Empty })">
                     <button type="submit" class="nav-link btn btn-link text-light justify-content-center">Logout<i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i></button>
@@ -54,3 +62,4 @@
         </li>
     }
 </ul>
+
