--- a/Web/Bookworm.Web/Views/Quiz/TakeQuiz.cshtml
+++ b/Web/Bookworm.Web/Views/Quiz/TakeQuiz.cshtml
@@ -4,8 +4,12 @@
     ViewData["Title"] = "Generate Quiz";
 }
 
-<div class="text-center textContainer col-3">
-    <h2 class="text-center">@this.ViewData["Title"]</h2>
+<div class="col d-flex justify-content-center animate__animated animate__zoomIn">
+    <div id="textCard" class="card col-5 text-center">
+        <div class="card-body">
+            <h1 class="display-4">@this.ViewData["Title"]</h1>
+        </div>
+    </div>
 </div>
 
 <form method="post" class="col-lg-8 offset-lg-2">
