--- a/Web/Bookworm.Web/Views/Quote/All.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/All.cshtml
@@ -5,10 +5,13 @@
     int index = 1;
 }
 
-<div class="text-center col-3 textContainer animate__animated animate__zoomIn">
-    <h1 class="text-center">@this.ViewData["Title"]</h1>
+<div class="col d-flex justify-content-center animate__animated animate__zoomIn">
+    <div id="textCard" class="card col-4 text-center">
+        <div class="card-body">
+            <h1 class="display-4">@this.ViewData["Title"]</h1>
+        </div>
+    </div>
 </div>
-
 
 <table id="quotesTable" class="table table-bordered animate__animated animate__zoomIn">
     <thead>
