--- a/Web/Bookworm.Web/Views/Quote/UserQuotes.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/UserQuotes.cshtml
@@ -4,77 +4,59 @@
     ViewData["Title"] = "My Quotes";
 }
 
-<h2 class="text-center  animate__animated animate__zoomIn">@ViewData["Title"]</h2>
-
-
+<div class="col d-flex justify-content-center animate__animated animate__zoomIn">
+    <div id="textCard" class="card col-4 text-center">
+        <div class="card-body">
+            <h1 class="display-8">@ViewData["Title"]</h1>
+        </div>
+    </div>
+</div>
 
 <div class="card-body table-responsive p-0">
     <table class="table table-hover text-nowrap">
         <thead>
             <tr>
-                <th class="text-center">Content</th>
+                <th>Content</th>
                 <th class="text-center">Author</th>
                 <th class="text-center">Movie</th>
                 <th class="text-center">Book</th>
-                <th class="text-center">Delete</th>
+                <th class="text-center">Edit</th>
             </tr>
         </thead>
         <tbody>
-           @foreach (var quote in Model)
-        {
-            <tr>
-                <td class="text-center">@quote.Content</td>
-                @if (@quote.AuthorName != null)
-                {
-                    <td>@quote.AuthorName</td>
-                }
-                else
-                {
-                    <td class="text-center">―</td>
-                }
-                @if (@quote.MovieTitle != null)
-                {
-                    <td class="text-center">@quote.MovieTitle</td>
-                }
-                else
-                {
-                    <td class="text-center">―</td>
-                }
-                @if (@quote.BookTitle != null)
-                {
-                    <td class="text-center">@quote.BookTitle</td>
-                }
-                else
-                {
-                    <td class="text-center">―</td>
-                }
-                <td class="text-center">
-                    <form asp-action="Delete" asp-controller="Quote" asp-route-id="@quote.Id" id="deleteQuoteForm" method="post">
-                    </form>
-                    <button type="submit" class="btn" data-toggle="modal" data-target="#deleteQuoteModal">Delete Quote</button>
-                </td>
-            </tr>
-        }
+            @foreach (var quote in Model)
+            {
+                <tr>
+                    <td>@quote.Content</td>
+                    @if (@quote.AuthorName != null)
+                    {
+                        <td class="text-center">@quote.AuthorName</td>
+                    }
+                    else
+                    {
+                        <td class="text-center">―</td>
+                    }
+                    @if (@quote.MovieTitle != null)
+                    {
+                        <td class="text-center">@quote.MovieTitle</td>
+                    }
+                    else
+                    {
+                        <td class="text-center">―</td>
+                    }
+                    @if (@quote.BookTitle != null)
+                    {
+                        <td class="text-center">@quote.BookTitle</td>
+                    }
+                    else
+                    {
+                        <td class="text-center">―</td>
+                    }
+                    <td>
+                        <a asp-area="" asp-action="Edit" asp-controller="Quote" asp-route-id="@quote.Id" class="btn">Edit Quote</a>
+                    </td>
+                </tr>
+            }
         </tbody>
     </table>
-</div>
-
-<div class="modal fade" id="deleteQuoteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Delete Quote</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                Are you sure you want to delete your quote?
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary" onclick="deleteQuoteForm.submit()">Yes</button>
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
 </div>
