--- a/Web/Bookworm.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_LoginPartial.cshtml
@@ -45,6 +45,10 @@
                     <i class="fas fa-pen fa-sm fa-fw mr-2 text-gray-400"></i>
                     My Quotes
                 </a>
+                <a class="dropdown-item" asp-area="" asp-action="Statistics" asp-controller="User">
+                    <i class="fas fa-user-graduate fa-sm fa-fw mr-2 text-gray-400"></i>
+                    Users Statistics
+                </a>
                 <div class="dropdown-divider"></div>
                 <form class="form-inline dropdown-item" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@this.Url.Action("Index", "Home", new { area = string.Empty })">
                     <button type="submit" class="nav-link btn btn-link text-light justify-content-center">Logout<i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i></button>
