--- a/Web/Bookworm.Web/Views/_ViewImports.cshtml
+++ b/Web/Bookworm.Web/Views/_ViewImports.cshtml
@@ -7,5 +7,6 @@
 @using Bookworm.Web.ViewModels.Books
 @using Bookworm.Web.ViewModels.Comments
 @using Bookworm.Web.ViewModels.Quizzes
+@using Bookworm.Web.ViewModels.Users
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Bookworm.Web
