--- a/Web/Bookworm.Web/Views/Book/CurrentBook.cshtml
+++ b/Web/Bookworm.Web/Views/Book/CurrentBook.cshtml
@@ -210,6 +210,7 @@
 
 
 <section>
+    <a class="btn" asp-action="Create" asp-controller="Comment" asp-route-bookId=@Model.Id asp-route-bookTitle=@Model.Title>Post Comment</a>
     @foreach (var comment in Model.Comments)
     {
         <div class="commentContainer mt-5">
