--- a/Web/Bookworm.Web/Views/Book/UserBooks.cshtml
+++ b/Web/Bookworm.Web/Views/Book/UserBooks.cshtml
@@ -1,25 +1,15 @@
-﻿@model IEnumerable<BookViewModel>
+﻿@model BookListingViewModel
 
 @{
     ViewData["Title"] = "My Books";
 }
-<h2 class="text-center">@ViewData["Title"]</h2>
-<div class="row">
-    @foreach (var book in Model)
-    {
-        <div class="col-md-3 mt-5 mb-4">
-            <div class="card bg-dark text-light h-100">
-                <img title="@book.Title" class="zoom" src="@book.ImageUrl" alt="Book" height="300">
-                <div class="card-body">
-                    <h5 class="card-title text-center">@book.Title</h5>
-                    <div class="text-center">
-                        <a asp-action="CurrentBook" asp-controller="Book" asp-route-id="@book.Id" class="btn mb-2">View Book</a>
-                    </div>
-                    <div class="text-center">
-                        <a asp-action="Edit" asp-controller="Book" asp-route-bookId="@book.Id" class="btn mb-2">Edit</a>
-                    </div>
-                </div>
-            </div>
+
+<div class="col d-flex justify-content-center">
+    <div id="textCard" class="card col-4 text-center">
+        <div class="card-body">
+            <h1 class="display-4">@ViewData["Title"]</h1>
         </div>
-    }
+    </div>
 </div>
+
+<partial name="_BookListingPartial" />
