--- a/Web/Bookworm.Web/Areas/Admin/Views/User/Index.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/User/Index.cshtml
@@ -1,33 +1,44 @@
 ﻿@model IEnumerable<UsersListViewModel>
 
-
 @{
     ViewData["Title"] = "Manage Users";
 }
 
 <h1 class="text-center">Users</h1>
 
-<div class="card-body table-responsive p-0">
-    <table class="table table-hover text-nowrap">
-        <thead>
-            <tr>
-                <th>Username</th>
-                <th>Email</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var user in Model)
-            {
-                <tr>
-                    <td>@user.Username</td>
-                    <td>@user.Email</td>
-                    <td>
-                        <a asp-area="admin" asp-action="Edit" asp-controller="User" asp-route-id="@user.Id" class="btn btn-outline-info">Edit User</a>
-                        <a asp-area="admin" asp-action="Roles" asp-controller="User" asp-route-userId="@user.Id" class="btn btn-outline-info">User Role</a>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
+<div class="container-fluid">
+    <div class="card shadow mb-4">
+        <div class="card-body">
+            <div class="table-responsive">
+                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                    <thead>
+                        <tr>
+                            <th>Username</th>
+                            <th>Email</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var user in Model)
+                        {
+                            <tr>
+                                <td>@user.Username</td>
+                                <td>@user.Email</td>
+                                <td class="text-center">
+                                    <a asp-area="admin" asp-action="Edit" asp-controller="User" asp-route-id="@user.Id" class="btn btn-outline-info">Edit User</a>
+                                    <a asp-area="admin" asp-action="Roles" asp-controller="User" asp-route-userId="@user.Id" class="btn btn-outline-info">User Role</a>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 </div>
+
+@section Scripts{
+    <script src="~/lib/sb-admin-2/datatables/js/datatables-demo.js"></script>
+    <script src="~/lib/sb-admin-2/datatables/js/dataTables.bootstrap4.min.js"></script>
+    <script src="~/lib/sb-admin-2/datatables/js/jquery.dataTables.min.js"></script>
+}
