--- a/Web/Bookworm.Web/Areas/Admin/Views/User/Index.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/User/Index.cshtml
@@ -38,7 +38,7 @@
 </div>
 
 @section Scripts{
-    <script src="~/lib/sb-admin-2/datatables/js/datatables-demo.js"></script>
-    <script src="~/lib/sb-admin-2/datatables/js/dataTables.bootstrap4.min.js"></script>
-    <script src="~/lib/sb-admin-2/datatables/js/jquery.dataTables.min.js"></script>
+    <script src="~/js/datatables-demo.js"></script>
+    <script src="~/js/dataTables.bootstrap4.min.js"></script>
+    <script src="~/js/jquery.dataTables.min.js"></script>
 }
