--- a/Web/Bookworm.Web/Views/Shared/_AdminLayout.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_AdminLayout.cshtml
@@ -13,9 +13,9 @@
     <!-- Custom fonts for this template-->
     <link href="~/lib/fontawesome/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-    <link href="~/lib/sb-admin-2/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet">
+    <link href="~/css/dataTables.bootstrap4.min.css" rel="stylesheet">
     <!-- Custom styles for this template-->
-    <link href="~/lib/sb-admin-2/css/sb-admin-2.min.css" rel="stylesheet">
+    <link href="~/css/sb-admin-2.css" rel="stylesheet">
 </head>
 
 <body id="page-top">
@@ -116,7 +116,7 @@
 
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/sb-admin-2/js/sb-admin-2.min.js"></script>
+    <script src="~/js/sb-admin-2.min.js"></script>
     @await this.RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
