--- a/Web/Bookworm.Web/Areas/Admin/Views/Quote/AllQuotes.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/Quote/AllQuotes.cshtml
@@ -13,7 +13,8 @@
             <th scope="col">Author</th>
             <th scope="col">Book</th>
             <th scope="col">Movie</th>
-            <th scope="col">Manage</th>
+            <th scope="col">Approve</th>
+            <th scope="col">Delete</th>
         </tr>
     </thead>
     <tbody>
@@ -48,8 +49,8 @@
                 {
                     <td>―</td>
                 }
-                <td class="btn btn-outline-success text-center"><a asp-action="ApproveQuote" asp-controller="Quote" asp-area="admin" asp-route-id="@quote.Id" asp-route-userId="@quote.UserId">Approve</a></td>
-                <td class="btn btn-outline-danger text-center"><a asp-action="DeleteQuote" asp-controller="Quote" asp-area="admin">Delete</a></td>
+                <td class="text-center"><a class="btn btn-outline-success" asp-action="ApproveQuote" asp-controller="Quote" asp-area="admin" asp-route-id="@quote.Id" asp-route-userId="@quote.UserId">Approve</a></td>
+                <td class="text-center"><a class="btn btn-outline-danger" asp-action="DeleteQuote" asp-controller="Quote" asp-area="admin">Delete</a></td>
             </tr>
             index++;
         }
