--- a/Web/Bookworm.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Web/Bookworm.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -47,13 +47,10 @@
                                     </div>
                                 </div>
                                 <div class="text-center">
-                                    <button type="submit" class="btn">Login</button>
+                                    <button type="submit" class="btn button">Login</button>
                                 </div>
 
                                 <hr>
-                                @*<a href="index.html" class="btn btn-google btn-user btn-block">
-                                    <i class="fab fa-google fa-fw"></i> Login with Google
-                                    </a>*@
                             </form>
                             <div class="col-md-12 col-md-offset-2">
                                 <section>
