--- a/Web/Bookworm.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Web/Bookworm.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -48,7 +48,7 @@
                         </div>
                         <hr>
                         <div class="form-group text-center">
-                            <button type="submit" class="btn">Register</button>
+                            <button type="submit" class="btn button">Register</button>
                         </div>
                     </form>
                     <hr>
