--- a/Web/Bookworm.Web/Views/Book/Random.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Random.cshtml
@@ -29,6 +29,6 @@
         <label for="twenty">20</label>
     </div>
     <div class="text-center">
-        <button type="submit" class="btn">Generate</button>
+        <button type="submit" class="btn button">Generate</button>
     </div>
 </form>
