--- a/Web/Bookworm.Web/Views/Comment/Create.cshtml
+++ b/Web/Bookworm.Web/Views/Comment/Create.cshtml
@@ -21,7 +21,7 @@
     <input type="hidden" name="bookId" value="@Model.BookId">
     <hr />
     <div class="text-center">
-        <input type="submit" class="btn" value="Post Comment" />
+        <input type="submit" class="button" value="Post Comment" />
     </div>
 
 </form>
