--- a/Web/Bookworm.Web/Views/Quiz/TakeQuiz.cshtml
+++ b/Web/Bookworm.Web/Views/Quiz/TakeQuiz.cshtml
@@ -28,6 +28,6 @@
     <input asp-for="CountQuestions" type="radio" value=20>
     <label>20</label>
     <div class="text-center">
-        <button type="submit" class="btn">Generate Quiz</button>
+        <button type="submit" class="btn button">Generate Quiz</button>
     </div>
 </form>
