--- a/Web/Bookworm.Web/Views/Book/Edit.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Edit.cshtml
@@ -48,7 +48,7 @@
     </div>
 </form>
 <div class="text-center">
-    <button type="submit" class="btn" data-toggle="modal" data-target="#editModal"><strong>Edit Book</strong></button>
+    <button type="submit" class="btn button" data-toggle="modal" data-target="#editModal"><strong>Edit Book</strong></button>
 </div>
 
 <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
