--- a/Web/Bookworm.Web/Views/Book/Upload.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Upload.cshtml
@@ -62,7 +62,7 @@
         <span asp-validation-for="Description" class="small text-danger"></span>
     </div>
     <div class="text-center">
-        <button type="submit" class="btn"><strong>Upload Book<i class="fas fa-upload icon"></i></strong></button>
+        <button type="submit" class="btn button"><strong>Upload Book<i class="fas fa-upload icon"></i></strong></button>
     </div>
 </form>
 
