--- a/Web/Bookworm.Web/Views/FavoriteBook/Favorites.cshtml
+++ b/Web/Bookworm.Web/Views/FavoriteBook/Favorites.cshtml
@@ -18,7 +18,7 @@
                 <div class="card-body">
                     <h5 class="card-title text-center">@book.Title</h5>
                     <div class="text-center">
-                        <a asp-action="CurrentBook" asp-controller="Book" asp-route-id="@book.Id" class="btn mb-2">View Book</a>
+                        <a asp-action="CurrentBook" asp-controller="Book" asp-route-id="@book.Id" class="btn button mb-2">View Book</a>
                         <a asp-action="DeleteFromFavorites" asp-controller="FavoriteBook" asp-route-bookId="@book.Id" class="btn btnDanger">Remove Book</a>
                     </div>
                 </div>
