--- a/Web/Bookworm.Web/Views/Home/Index.cshtml
+++ b/Web/Bookworm.Web/Views/Home/Index.cshtml
@@ -47,17 +47,17 @@
     <section class="homeButtonsSection">
         <div class="row text-center">
             <div class="col-4">
-                <a asp-controller="Book" asp-action="Upload" class="btn btn-lg">
+                <a asp-controller="Book" asp-action="Upload" class="btn button btn-lg">
                     Upload Book<i class="fas fa-upload icon"></i>
                 </a>
             </div>
             <div class="col-4">
-                <a asp-controller="Quiz" asp-action="TakeQuiz" class="btn btn-lg">
+                <a asp-controller="Quiz" asp-action="TakeQuiz" class="btn button btn-lg">
                     Take Quiz
                 </a>
             </div>
             <div class="col-4">
-                <a asp-controller="Quote" asp-action="Add" class="btn btn-lg">
+                <a asp-controller="Quote" asp-action="Add" class="btn button btn-lg">
                     Upload Quote<i class="fas fa-upload icon"></i>
                 </a>
             </div>
