--- a/Web/Bookworm.Web/Views/Quote/Add.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/Add.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="col d-flex justify-content-center animate__animated animate__zoomIn">
-    <div id="textCard" class="card col-4 text-center">
+    <div id="textCard" class="card col-5 text-center">
         <div class="card-body">
             <h1 class="display-7">@this.ViewData["Title"]<i class="fas fa-pen icon"></i></h1>
         </div>
@@ -36,6 +36,6 @@
         <span asp-validation-for="MovieTitle" class="small text-danger"></span>
     </div>
     <div class="text-center">
-        <button type="submit" class="btn text-center form-button"><strong>Upload Quote<i class="fas fa-upload icon"></i></strong></button>
+        <button type="submit" class="btn button text-center form-button"><strong>Upload Quote<i class="fas fa-upload icon"></i></strong></button>
     </div>
 </form>
