--- a/Web/Bookworm.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_LoginPartial.cshtml
@@ -51,7 +51,7 @@
                 </a>
                 <div class="dropdown-divider"></div>
                 <form class="form-inline dropdown-item" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@this.Url.Action("Index", "Home", new { area = string.Empty })">
-                    <button type="submit" class="nav-link btn btn-link text-light justify-content-center">Logout<i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i></button>
+                    <button type="submit" class="nav-link btn button btn-link text-light justify-content-center">Logout<i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i></button>
                 </form>
             </div>
         </li>
