--- a/Web/Bookworm.Web/Views/Quote/Edit.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/Edit.cshtml
@@ -24,6 +24,6 @@
         <span asp-validation-for="MovieTitle" class="small text-danger"></span>
     </div>
     <div class="text-center">
-        <button type="submit" class="btn text-center form-button"><strong>Edit Quote</strong></button>
+        <button type="submit" class="btn button text-center form-button"><strong>Edit Quote</strong></button>
     </div>
 </form>
