--- a/Web/Bookworm.Web/wwwroot/css/site.css
+++ b/Web/Bookworm.Web/wwwroot/css/site.css
@@ -464,3 +464,8 @@ input[type="radio"] {
     width: 100%;
     height: auto;
 }
+
+.unapprovedQuotesBtn{
+    margin-bottom:2rem;
+    margin-top:2rem;
+}
